Implement shoe list screen and shoe detail screen

--- a/app/src/main/res/layout/fragment_instructions.xml
+++ b/app/src/main/res/layout/fragment_instructions.xml
@@ -44,7 +44,7 @@
             app:layout_constraintTop_toBottomOf="@+id/instruction_text_view" />
 
         <Button
-            android:id="@+id/next_button"
+            android:id="@+id/start_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
