--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,4 +16,19 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="DefaultText">
+        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+    <style name="DefaultTextBold" parent="DefaultText">
+        <item name="android:textStyle">bold</item>
+    </style>
+    <style name="DefaultTitle" parent="DefaultTextBold">
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">34sp</item>
+    </style>
+    <style name="DefaultButton" parent="DefaultTextBold">
+        <item name="backgroundTint">@color/colorPrimary</item>
+    </style>
 </resources>
