--- a/app/src/main/res/layout/fragment_shoe_detail.xml
+++ b/app/src/main/res/layout/fragment_shoe_detail.xml
@@ -2,7 +2,11 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-
+<data>
+    <variable
+        name="viewModel"
+        type="com.example.android_nanodegree_shoestore.viewmodel.ShoeViewModel" />
+</data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -53,7 +57,8 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="@string/shoe_name"
-                    android:inputType="text" />
+                    android:inputType="text"
+                    android:text="@={viewModel.newShoeName}"/>
 
                 <TextView
                     android:id="@+id/company_name_label"
@@ -70,7 +75,8 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="@string/company_name"
-                    android:inputType="text" />
+                    android:inputType="text"
+                    android:text="@={viewModel.newCompanyName}"/>
 
                 <TextView
                     android:id="@+id/shoe_size_label"
@@ -87,7 +93,8 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="@string/shoe_size"
-                    android:inputType="text" />
+                    android:inputType="text"
+                    android:text="@={viewModel.newShoeSize}"/>
 
                 <TextView
                     android:id="@+id/shoe_description_label"
@@ -104,7 +111,8 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="@string/shoe_description"
-                    android:inputType="text" />
+                    android:inputType="text"
+                    android:text="@={viewModel.newShoeDescription}"/>
 
             </LinearLayout>
         </ScrollView>
