refactor WelcomeFragment and InstructionsFragment

--- a/app/src/main/res/layout/fragment_instructions.xml
+++ b/app/src/main/res/layout/fragment_instructions.xml
@@ -2,6 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -11,7 +12,7 @@
             android:id="@+id/instruction_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="@dimen/large_80"
             android:adjustViewBounds="true"
             android:src="@drawable/instruction"
             app:layout_constraintEnd_toEndOf="parent"
@@ -20,40 +21,39 @@
 
         <TextView
             android:id="@+id/instruction_text_view"
-            android:layout_width="wrap_content"
+            style="@style/DefaultTitle"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="54dp"
-            android:text="Welcome to our shoe store instruction"
-            android:textAlignment="center"
-            android:textSize="36sp"
-            android:textStyle="normal"
+            android:layout_marginStart="@dimen/spacing_large"
+            android:layout_marginTop="@dimen/large_54"
+            android:layout_marginEnd="@dimen/spacing_large"
+            android:text="@string/instructions_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/instruction_image" />
 
         <TextView
             android:id="@+id/instruction_detail_text"
-            android:layout_width="wrap_content"
+            style="@style/DefaultDescription"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Start your journey by clicking start"
-            android:textColor="#464C4B"
-            android:textSize="14sp"
+            android:layout_marginTop="@dimen/spacing_large"
+            android:text="@string/instruction_description"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/instruction_text_view" />
 
         <Button
             android:id="@+id/start_button"
-            android:layout_width="match_parent"
+            style="@style/DefaultButton"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="16dp"
-            android:backgroundTint="#1F41BB"
-            android:text="Start"
-            android:textAllCaps="false"
-            android:textStyle="bold"
+            android:layout_marginStart="@dimen/spacing_large"
+            android:layout_marginTop="@dimen/spacing_extra_large"
+            android:layout_marginEnd="@dimen/spacing_large"
+            android:text="@string/start"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/instruction_detail_text" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
