--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -12,51 +12,48 @@
             android:id="@+id/welcome_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="@dimen/large_100"
+            android:adjustViewBounds="true"
             android:src="@drawable/welcome"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:adjustViewBounds="true"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/welcome_text_view"
-            android:layout_width="wrap_content"
+            style="@style/DefaultTitle"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="54dp"
-            android:text="Welcome to our shoe store"
-            android:textAlignment="center"
-            android:textSize="36sp"
-            android:textStyle="normal"
+            android:layout_marginStart="@dimen/spacing_large"
+            android:layout_marginTop="@dimen/large_54"
+            android:layout_marginEnd="@dimen/spacing_large"
+            android:text="@string/welcome_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/welcome_image"
-            />
+            app:layout_constraintTop_toBottomOf="@+id/welcome_image" />
 
         <TextView
             android:id="@+id/welcome_detail_text"
-            android:layout_width="wrap_content"
+            style="@style/DefaultDescription"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Capture your item , get info and instantly buy"
-            android:textColor="#464C4B"
-            android:textSize="14sp"
+            android:layout_marginTop="@dimen/spacing_medium"
+            android:text="@string/welcome_description"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/welcome_text_view"
-            />
+            app:layout_constraintTop_toBottomOf="@+id/welcome_text_view" />
 
         <Button
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
             android:id="@+id/next_button"
-            android:layout_width="match_parent"
+            style="@style/DefaultButton"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:backgroundTint="#1F41BB"
-            android:text="Next"
-            android:textAllCaps="false"
-            android:textStyle="bold"
+            android:layout_marginStart="@dimen/spacing_large"
+            android:layout_marginTop="@dimen/spacing_extra_large"
+            android:layout_marginEnd="@dimen/spacing_large"
+            android:text="@string/next"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/welcome_detail_text" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
