--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,9 +7,17 @@
     <dimen name="spacing_medium">16dp</dimen>
     <dimen name="spacing_small">8dp</dimen>
     <dimen name="spacing_too_small">4dp</dimen>
-    <dimen name="season_card_width">88dp</dimen>
+    <dimen name="large_100">100dp</dimen>
+    <dimen name="large_54">54dp</dimen>
+
+    <!-- texts -->
+    <dimen name="text_large">20sp</dimen>
+    <dimen name="text_medium">14sp</dimen>
+    <dimen name="text_small">12sp</dimen>
 
 
     <!--  layout -->
     <dimen name="login_image_height">360dp</dimen>
+    <dimen name="large_80">80dp</dimen>
+
 </resources>
