--- a/app/src/main/res/layout/fragment_shoe_detail.xml
+++ b/app/src/main/res/layout/fragment_shoe_detail.xml
@@ -2,39 +2,44 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-<data>
-    <variable
-        name="viewModel"
-        type="com.example.android_nanodegree_shoestore.viewmodel.ShoeViewModel" />
-</data>
+
+    <data>
+
+        <variable
+            name="viewModel"
+            type="com.example.android_nanodegree_shoestore.viewmodel.ShoeViewModel" />
+
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
         tools:context=".ui.ShoeDetailFragment">
 
         <TextView
             android:id="@+id/shoe_detail_title"
             style="@style/DefaultTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
-            android:text="Enter Your show detail here"
+            android:layout_marginStart="@dimen/spacing_large"
+            android:layout_marginTop="@dimen/large_54"
+            android:layout_marginEnd="@dimen/spacing_large"
+            android:text="@string/detail_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ScrollView
-            android:id="@+id/scrollView2"
+            android:id="@+id/detail_scrollView"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="24dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginStart="@dimen/spacing_large"
+            android:layout_marginTop="@dimen/spacing_large"
+            android:layout_marginEnd="@dimen/spacing_large"
+            android:layout_marginBottom="@dimen/spacing_large"
             app:layout_constraintBottom_toTopOf="@+id/save_button"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/shoe_detail_title">
 
@@ -58,14 +63,14 @@
                     android:ems="10"
                     android:hint="@string/shoe_name"
                     android:inputType="text"
-                    android:text="@={viewModel.newShoeName}"/>
+                    android:text="@={viewModel.newShoeName}" />
 
                 <TextView
                     android:id="@+id/company_name_label"
                     style="@style/DefaultTextBold"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="@dimen/spacing_medium"
                     android:text="@string/company_name" />
 
                 <EditText
@@ -76,14 +81,14 @@
                     android:ems="10"
                     android:hint="@string/company_name"
                     android:inputType="text"
-                    android:text="@={viewModel.newCompanyName}"/>
+                    android:text="@={viewModel.newCompanyName}" />
 
                 <TextView
                     android:id="@+id/shoe_size_label"
                     style="@style/DefaultTextBold"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="@dimen/spacing_medium"
                     android:text="@string/shoe_size" />
 
                 <EditText
@@ -94,14 +99,14 @@
                     android:ems="10"
                     android:hint="@string/shoe_size"
                     android:inputType="text"
-                    android:text="@={viewModel.newShoeSize}"/>
+                    android:text="@={viewModel.newShoeSize}" />
 
                 <TextView
                     android:id="@+id/shoe_description_label"
                     style="@style/DefaultTextBold"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="@dimen/spacing_medium"
                     android:text="@string/shoe_description" />
 
                 <EditText
@@ -112,7 +117,7 @@
                     android:ems="10"
                     android:hint="@string/shoe_description"
                     android:inputType="text"
-                    android:text="@={viewModel.newShoeDescription}"/>
+                    android:text="@={viewModel.newShoeDescription}" />
 
             </LinearLayout>
         </ScrollView>
@@ -122,9 +127,9 @@
             style="@style/DefaultButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginStart="@dimen/spacing_large"
+            android:layout_marginEnd="@dimen/spacing_large"
+            android:layout_marginBottom="@dimen/spacing_small"
             android:text="@string/save"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/cancel_button"
@@ -136,8 +141,8 @@
             style="@style/DefaultButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginStart="@dimen/spacing_large"
+            android:layout_marginEnd="@dimen/spacing_large"
             android:text="@string/cancel"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
