--- a/app/src/main/res/layout/item_shoe.xml
+++ b/app/src/main/res/layout/item_shoe.xml
@@ -2,7 +2,7 @@
 
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/textView"
+    style="@style/DefaultTitle"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    style="@style/DefaultTitle"/>
+    android:layout_height="wrap_content" />
 
